Final css fix for CSS problem where long location suggestions would overlap.

--- a/onebusaway-nyc-webapp/src/main/webapp/css/map/map.css
+++ b/onebusaway-nyc-webapp/src/main/webapp/css/map/map.css
@@ -114,6 +114,7 @@
 	margin-top: .5em;
 	background-position: 0 .3em;
 	background-repeat: no-repeat;
+	min-height: 40px;
 }
 
 #content #matches ul li.legendItem {
